frontend/test/should_fail/from_storage_003b.grg
using from_storage;

rule s(ref m:map<NN,NN>, n:N)
{
	x:NN{m[n]} --> y:Node;
	
	modify {
		delete(y);
	}
}

